Updated CONTRIBUTING.md